# HomeAutomation

./: Cargo.toml  LICENSE  README.md
.github/workflows/: continuous_deployment.yml
pkg/: home_automation_lib.js
src/: app_main.rs  lib.rs  main.rs
ui/: about-box.slint  about-page.slint  home-screen.slint  main.slint
ui/controls/: automation.slint  generic.slint
ui/style/: styles.slint
ui/tiles/: tiles-controllers.slint  tiles-grid.slint  tiles.slint
wasm/: index.html
